# ctrl-sim

./: .gitignore  LICENSE  README.md  environment.yml  eval_planner.py  eval_sim.py  setup.py  train.py
cfgs/: config.py  config.yaml
cfgs/datamodule/: base.yaml  ctg_plus_plus.yaml
cfgs/dataset/waymo/: base.yaml  ctg_plus_plus.yaml  ctrl_sim.yaml  ctrl_sim_finetuning.yaml
cfgs/eval/: base.yaml  partitioned.yaml
cfgs/eval_planner_adversary/: base.yaml
cfgs/model/: base.yaml  ctg_plus_plus.yaml  ctrl_sim.yaml  dt.yaml  il.yaml  trajeglish.yaml
cfgs/policy/: base.yaml  cat.yaml  ctg_plus_plus.yaml  ctrl_sim.yaml  ctrl_sim_adversary.yaml  ctrl_sim_planner.yaml  dt.yaml  il.yaml  trajeglish.yaml
cfgs/train/: base.yaml  ctg_plus_plus.yaml  ctrl_sim_finetuning.yaml
data/: filter_valid_cat_scenarios.py  generate_offline_rl_cat_dataset.py  generate_offline_rl_dataset.py  preprocess_rl_waymo.py  split_val_test.py
datamodules/: __init__.py  waymo_rl_datamodule.py  waymo_rl_datamodule_finetuning.py
datasets/rl_waymo/: __init__.py  dataset.py  dataset_ctg_plus_plus.py  dataset_ctrl_sim.py  dataset_ctrl_sim_finetuning.py
evaluators/: __init__.py  evaluator.py  planner_adversary_evaluator.py  policy_evaluator.py
models/: __init__.py  ctg_plus_plus.py  ctrl_sim.py
modified_cat_files/: cat_advgen.py  convert_WOMD_to_MD.py
modules/: __init__.py  ctg_arch.py  decoder.py  diffusion.py  diffusion_guidance.py  encoder.py  map_encoder.py  rtg_model.py
nocturne/: CMakeLists.txt  __init__.py  bicycle_model.py
nocturne/cpp/: CMakeLists.txt
nocturne/cpp/include/: object.h  object_base.h  scenario.h  simulation.h  vehicle.h
nocturne/cpp/include/physics/: BaseCar.h  ExpertControlCar.h  FreeCar.h  PhysicsSimulation.h  Singletons.h  Trajectory.h  TrajectoryCar.h  defines.h
nocturne/cpp/src/: object.cc  scenario.cc  vehicle.cc
nocturne/cpp/src/physics/: BaseCar.cpp  ExpertControlCar.cpp  FreeCar.cpp  PhysicsSimulation.cpp  Singletons.cpp  Trajectory.cpp  TrajectoryCar.cpp
nocturne/pybind11/include/: nocturne.h
nocturne/pybind11/src/: nocturne.cc  object.cc  scenario.cc  stop_sign.cc  vehicle.cc
policies/: __init__.py  autoregressive_policy.py  ctg_plus_plus_policy.py  policy.py
utils/: __init__.py  data.py  diffusion_helpers.py  geometry.py  layers.py  sim.py  train_utils.py  viz.py
